--- a/TypeScript/src/index.html
+++ b/TypeScript/src/index.html
@@ -7,7 +7,34 @@
     <title>贪吃蛇</title>
 </head>
 <body>
-    
+    <!-- 创建游戏主容器 -->
+    <div id="main">
+        <!-- 创建游戏界面 -->
+        <div id="stage">
+            <!-- 创建蛇 -->
+            <div id="snake">
+                <!-- 创建蛇内部的各部分 -->
+                <div></div>
+            </div>
+            <!-- 创建蛇的食物 -->
+            <div id="food">
+                <!-- 通过四个div来设置食物样式 -->
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+        </div>
+        <!-- 创建记分面板 -->
+        <div id="score-panel">
+            <div>
+                SCORE: <span id="score">0</span>
+            </div>
+            <div>
+                LEVEL: <span id="level">1</span>
+            </div>
+        </div>
+    </div>
     
 </body>
 </html>
