finish module and control

--- a/TypeScript/src/index.html
+++ b/TypeScript/src/index.html
@@ -18,7 +18,7 @@
             </div>
             <!-- 创建蛇的食物 -->
             <div id="food">
-                <!-- 通过四个div来设置食物样式 -->
+                <!-- 通过四个div来设置食物开花样式 -->
                 <div></div>
                 <div></div>
                 <div></div>
